--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
+            max-width: 600px;
             width: 100%;
         }
 
@@ -112,12 +112,14 @@
             <button onclick="showTab('trainingMeleeTab')">Kalkulator treningu melee</button>
             <button onclick="showTab('trainingDistTab')">Kalkulator treningu dist</button>
             <button onclick="showTab('trainingMagicTab')">Kalkulator treningu magic</button>
+            <button onclick="showTab('otmlEditorTab')">Kamyczki</button>
         </div>
 
         <div id="staminaTab" class="tab-content active">
             <h1>Kalkulator odnawiania staminy</h1>
 
-            <p class="info"><strong>Uwaga:</strong> bonus stamina to <strong>2 godziny</strong>, a nie 3 jak dawniej.</p>
+            <p class="info"><strong>Uwaga:</strong> bonus stamina to <strong>2 godziny</strong>, a nie 3 jak dawniej.
+            </p>
 
             <label for="staminaHours">Aktualny poziom staminy (godziny):</label>
             <input type="number" id="staminaHours" placeholder="Wpisz ilość godzin" min="0" value="40">
@@ -207,6 +209,98 @@
 
             <div class="result" id="trainingResultDist"></div>
         </div>
+
+        <div id="otmlEditorTab" class="tab-content">
+            <h1>🗺️ Edytor Minimapy</h1>
+
+            <div class="editor-instructions">
+                <ol>
+                    <li>
+                        Zaloguj się na swoją postać, utwórz nowy znacznik o nazwie
+                        <code>bigos_rocks</code> na minimapie i  <strong style="color:red;">zamknij klienta gry.</strong>
+                        <div class="image-wrapper">
+                            <img src="./bigos_map.jpg" alt="Minimapa z oznaczonym bigos_rocks" class="help-image">
+                        </div>
+                    </li>
+                    <li>
+                        Wgraj plik <strong>.otml</strong> z katalogu map dla swojej postaci, aby zastąpić w nim znacznik
+                        <code>bigos_rocks</code> zawartością pliku
+                        <a href="./map_rocks.yaml" target="_blank" download>map_rocks.yaml</a>.
+                    </li>
+                    <li>
+                        Pobierz zmodyfikowany plik <strong>.otml</strong> i umieść go z powrotem w katalogu map.
+                    </li>
+                </ol>
+            </div>
+
+            <div class="file-section">
+                <label for="otmlFile">📂 Wybierz plik .otml:</label>
+                <p class="info">
+                    <b>Ścieżka:</b> <code>%APPDATA%/Realera/Realera/map</code>
+                </p>
+                <div class="image-wrapper">
+                    <img src="./map_folder.jpg" alt="Folder z plikami map Realera" class="help-image">
+                </div>
+
+                <input type="file" id="otmlFile" accept=".otml">
+                <button class="calculate" id="processBtn">⚙️ Przetwórz plik</button>
+
+                <div id="status" class="result"></div>
+
+                <a id="downloadLink" style="display:none;" class="calculate" href="#" download>
+                    📥 Pobierz zmodyfikowany plik
+                </a>
+            </div>
+
+
+            <script>
+                async function fetchMapRocks() {
+                    const response = await fetch('https://parrotpl.github.io/realera-calc/map%20rocks%20marker/map_rocks.yaml');
+                    if (!response.ok) throw new Error('Nie udało się pobrać pliku map_rocks.yaml');
+                    return await response.text();
+                }
+
+                document.getElementById('processBtn').addEventListener('click', async () => {
+                    const fileInput = document.getElementById('otmlFile');
+                    const status = document.getElementById('status');
+                    const downloadLink = document.getElementById('downloadLink');
+
+                    if (!fileInput.files.length) {
+                        alert('Wybierz plik .otml!');
+                        return;
+                    }
+
+                    const file = fileInput.files[0];
+                    const originalName = file.name;
+                    const text = await file.text();
+
+                    status.textContent = 'Pobieranie map_rocks.yaml...';
+                    document.getElementById('processBtn').disabled = true;
+
+                    let yaml;
+                    try {
+                        yaml = await fetchMapRocks();
+                    } catch (e) {
+                        status.textContent = 'Błąd: ' + e.message;
+                        document.getElementById('processBtn').disabled = false;
+                        return;
+                    }
+
+                    status.textContent = 'Zamieniam bigos_rocks...';
+                    const newText = text.replace(/bigos_rocks/g, yaml.trim());
+                    const blob = new Blob([newText], { type: 'text/plain' });
+                    const url = URL.createObjectURL(blob);
+
+                    downloadLink.href = url;
+                    downloadLink.download = originalName.replace(/\.otml$/i, '_edited.otml');
+                    downloadLink.style.display = 'inline-block';
+                    status.textContent = 'Gotowe! Pobierz zmodyfikowany plik.';
+                    document.getElementById('processBtn').disabled = false;
+                });
+            </script>
+        </div>
+
+
     </div>
 
     <script>
