Update image tag with new styling attributes
Adjusted image styling for better display.

--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
                         Zaloguj się na swoją postać, utwórz nowy znacznik o nazwie
                         <code>bigos_rocks</code> na minimapie i <strong style="color:red;">zamknij klienta gry.</strong>
                         <div class="image-wrapper">
-                            <img src="./bigos_map.jpg" alt="Minimapa z oznaczonym bigos_rocks" class="help-image">
+                            <img src="./bigos_map.jpg" alt="Minimapa z oznaczonym bigos_rocks" class="help-image"
+                                style="width: 50%; height: auto;">
                         </div>
                     </li>
                     <li>
